--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,105 @@
-/* font-family: 'Ubuntu', sans-serif; */
+/* reset css */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* border: none; */
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+:root {
+    /* font-size: 62.5%; */
+}
+
+body {
+    background: linear-gradient(180deg, #594cee 0%, #8dd0f5 100%);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
+}
+
+.container {
+    background-color: #5c54ed;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 2rem;
+    border-radius: 1rem;
+    color: #fdfdfd;
+}
+
+/* form */
+
+.form h3 {
+    margin-bottom: 1rem;
+}
+
+.form-input-container {
+    display: flex;
+}
+
+.form input {
+    padding: 0.8rem;
+    border: none;
+    border-radius: 4px;
+    flex: 1;
+}
+
+.form button {
+    padding: 0.8rem;
+    min-width: 50px;
+    margin-left: 8px;
+    border: none;
+    border-radius: 4px;
+    background-color: #8dd0f5;
+    color: #fff;
+    cursor: pointer;
+}
+
+/* weather */
+
+#weather-data {
+    margin-top: 1.5rem;
+}
+
+#weather-data h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0.6rem;
+}
+
+#weather-data h2 i {
+    font-size: 1rem;
+}
+#weather-data span {
+    margin: 0.6rem;
+}
+
+#country {
+    height: 30px;
+}
+
+#details-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+#umidity, #wind {
+    display: flex;
+    gap: 0.6rem;
+}
+
+
+
+
+
+
